pygobject.c: Don't leak GObjectClass reference

https://bugzilla.gnome.org/show_bug.cgi?id=684062